# CatCu

./: CMakeLists.txt  devEnv.sh  main.cpp  main.h  readme.md  run_docker.sh
include/: DataArgs.h  Interface.cuh  cuda_common.cuh  cuda_raii.cuh  utools.cuh
src/: Interface.cu  cuda_raii.cu
test/: hello_cuda.cu
